product-catalog and css

--- a/src/global.css
+++ b/src/global.css
@@ -5,8 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #d9d9d9e6;  
-  
+  /* background-color: #d9d9d9e6; */
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -18,6 +18,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -26,8 +27,8 @@ body {
   margin: 0;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;  
-  height: 100vh;  
+  min-height: 100vh;
+  height: 100vh;
 }
 
 h1 {
@@ -46,9 +47,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -56,16 +59,18 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547; 
+    color: #213547;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
 }
- 
+
 #root {
   text-align: center;
 }
@@ -76,9 +81,11 @@ button:focus-visible {
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -87,6 +94,7 @@ button:focus-visible {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -105,12 +113,76 @@ button:focus-visible {
 .read-the-docs {
   color: #888;
 }
- 
+
 /* body .header-app-bar {
   background-color: #333333;
 } */
 
 .header-app-bar {
-  /* background-color: #333333; no toma*/ 
   background-color: #333333 !important;
+}
+
+.product-catalog {
+  display: grid;
+  grid-gap: 20px;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.product img {
+  width: auto;
+  height: 165px;
+  object-fit: contain;
+}
+
+.product-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 10px;
+}
+
+.product-details h2 {
+  margin-top: 0;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 4;
+  min-height: 75px;
+  font-size: 16px;
+}
+
+.product-details p {
+  margin: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .product-catalog {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .product-catalog {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .product-catalog {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.grid-container {
+  padding: 15px;
 }
