--- a/src/global.css
+++ b/src/global.css
@@ -187,3 +187,55 @@ button:focus-visible {
 .grid-container {
   padding: 15px;
 }
+
+/* .zoom {
+  overflow: hidden;
+  position: relative;
+}
+
+.zoom img {
+  transition: transform 0.5s ease;
+}
+
+.zoom:hover img {
+  transform: scale(1.5);
+} */
+
+
+
+/* 
+.zoom-container {
+  overflow: hidden;
+  position: relative;
+}
+.zoom img {
+  max-width: 100%;
+  max-height: 400px;
+  padding: 15px;
+  transition: transform 0.5s ease, left 0.5s ease, top 0.5s ease;
+}
+.zoom:hover img {
+  transform: scale(1.5);
+}
+.zoom-container:hover img {
+  position: absolute;
+  left: -25px;
+  top: -25px; 
+}
+.zoom-container:hover img:hover {
+  transform: scale(2); 
+} */
+
+.zoom-container {
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+}
+
+.zoom-img {
+  transition: transform 0.5s ease;
+}
+
+.zoom-img:hover {
+  transform: scale(1.5);
+}
