--- a/src/global.css
+++ b/src/global.css
@@ -239,3 +239,21 @@ button:focus-visible {
 .zoom-img:hover {
   transform: scale(1.5);
 }
+
+
+
+
+.cart-summary-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.label {
+  font-weight: bold;
+  text-align: left;
+}
+
+.value {
+  text-align: right;
+}
